[gd_scene load_steps=5 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.912, 32.889 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 31.6121, 33.3504 )

[node name="Node" type="Node" index="0"]

script = ExtResource( 1 )

[node name="ObjectA" type="KinematicBody2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 63, 57 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="ObjectA" index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectA" index="1"]

shape = SubResource( 1 )

[node name="Actor" type="Area2D" parent="." index="1"]

position = Vector2( 946, 362 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Actor" index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actor" index="1"]

shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="body_entered" from="Actor" to="." method="_on_Actor_body_entered"]

[connection signal="body_exited" from="Actor" to="." method="_on_Actor_body_exited"]

[connection signal="input_event" from="Actor" to="." method="_on_Actor_input_event"]


